--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   content: "";
   height: 100vh;
   width: 100%;
-  background-image: url(https://image.ibb.co/gzOBup/showcase.jpg);
+  background-image: url(showcase.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -103,6 +103,19 @@ body {
 
 .pimg4 {
   background-image: url("about-background2.jpg");
+  min-height: 400px;
+}
+
+.pimg5 {
+  position: relative;
+  opacity: 0.7;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.pimg5 {
+  background-image: url("about-background3.jpg");
   min-height: 400px;
 }
 
